--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,80 @@
+aio-pika==9.5.8
+aiormq==6.9.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
-bcrypt==4.1.3
-
+bcrypt==5.0.0
+bidict==0.23.1
+boto3==1.42.48
+botocore==1.42.48
 certifi==2026.1.4
+cffi==2.0.0
 click==8.3.1
+cryptography==46.0.5
+distro==1.9.0
 dnspython==2.8.0
+ecdsa==0.19.1
 email-validator==2.3.0
-fastapi==0.128.3
-fastapi-cli==0.0.20
+fastapi==0.129.0
+fastapi-cli==0.0.21
 fastapi-cloud-cli==0.11.0
 fastar==0.8.0
+grpcio==1.78.0
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
+hyperframe==6.1.0
 idna==3.11
-openai==1.58.1
 Jinja2==3.1.6
+jiter==0.13.0
+jmespath==1.1.0
 jose==1.0.0
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+multidict==6.7.1
+netifaces==0.10.6
 nodeenv==1.10.0
+numpy==2.4.2
+openai==2.20.0
+pamqp==3.3.0
+portalocker==3.2.0
 prisma==0.15.0
+propcache==0.4.1
+protobuf==6.33.5
+pyasn1==0.6.2
+pycparser==3.0
 pydantic==2.12.5
 pydantic-extra-types==2.11.0
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-engineio==4.13.1
+python-jose==3.5.0
 python-multipart==0.0.22
+python-socketio==5.16.1
 PyYAML==6.0.3
+qdrant-client==1.16.2
 rich==14.3.2
-rich-toolkit==0.18.1
+rich-toolkit==0.19.4
 rignore==0.7.6
+rsa==4.9.1
+s3transfer==0.16.0
 sentry-sdk==2.52.0
 shellingham==1.5.4
+simple-websocket==1.1.0
+six==1.17.0
+sniffio==1.3.1
+socketio==0.2.1
 starlette==0.52.1
 tomlkit==0.14.0
-typer==0.21.1
+tqdm==4.67.3
+typer==0.23.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
@@ -47,3 +82,5 @@ uvicorn==0.40.0
 uvloop==0.22.1
 watchfiles==1.1.1
 websockets==16.0
+wsproto==1.3.2
+yarl==1.22.0
